# eai-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  config.json
src/: bogus.rs  main.rs  store_scp.rs  utils.rs
src/legacy/: response_builders.rs  settings_handler.rs
