[package]
name = "eai-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
dicom = "0.5.4"
dicom-transfer-syntax-registry = "0.5.1"
dicom-ul = "0.4.4"
smallvec = "1.10.0"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.16"
